#30 Adding endpoint for nearest mobile
